# monte-carlo-sockets

./: .gitignore  CMakeLists.txt  README.md  client.c  elapsed_time.sh  elapsed_time_server.sh  elapsed_time_standalone.sh  server.c  standalone.c
src/: convert.c  convert.h  data.c  data.h  exectime.h  montecarlo.c  montecarlo.h  pipe.h  socketconfig.c  socketconfig.h
